web/src/main/webapp/geonetwork.css
/* ... */
div.modalbox * li {
    font-size: small
}

div.modalbox * li * li {
    font-size: smaller
}

div.row {
  margin-bottom: 5px;
}

span.labelField {
    display: table-cell;
    display: inline-block;
    width: 90px;
    vertical-align: top;
    font-size: 0.9em;
}

span.labelFieldSmall {
    display: table-cell;
    display: inline-block;
    width: 60px;
    vertical-align: top;
    font-size: 0.9em;
}

div.inspireThemeTitle {
    margin-top: 5px;
    margin-bottom: 5px;
    font-style: italic;
}

span.inspireThemeElement {
    /*display: table-cell;
    display: inline-block; */
	vertical-align:top;
}

.advsearchinspire {
	margin-top: 5px;
}

.xlinked {
     font-style: italic;
}

div.hittext  {
	padding: 5px;
	overflow: auto;
	width: 98%;
}

div.thumbnail_results {
	float: right;
	width: 200px !important;
	height: auto !important;
    text-align:center;
    vertical-align:middle;
}

div.hitdescription {

}

div.buttons {
	margin-top: 5px; 
	margin-bottom: 5px; 
	/*overflow: auto;*/
    height: 30px;
	width: 100%;
}

div.buttonsleft {
	float: left;
	text-align: left;
}

div.buttonsright {
	float: right;
}

div.caption {
	width: 100px;
	float: left;
	text-align: left;
}

div.abstract1, #owslinks {
	text-align: left;
	margin: 5px 5px 5px 100px;
}

div.hittext_middle {
	clear: left;
}

div.hittext_keywords {
	clear: left;
}

div.hittitle {
	padding-left: 28px;
	text-align: left;
	text-transform: uppercase;
	font-weight: bold;
	margin-left: 50px;
}

div.hittext_top {
}

div.keywords {
	text-align: left;
	margin: 5px 5px 5px 100px;	
}

div.attributionlogo {
	padding: 5px;
	float: left;
}

div.hitexport {
	float: right;
	margin-right: 5px;
	margin-left: 5px;
}

div.ownership{
	 float:right;
	 clear:both;
}

div.pageList {
	text-align: center;
	padding-top: 5px;
	padding-bottom: 5px;
}

